# CompSystemsArchitecture

./: CMakeLists.txt  README.md  circle.cpp  circle.h  circle.py  container.cpp  container.h  container.py  dataclass.py  enums.h  errorMessages.h  helper.py  main.cpp  main.py  main.spec  node.py  rectangle.cpp  rectangle.h  rectangle.py  shape.cpp  shape.h  shape.py  triangle.cpp  triangle.h  triangle.py
Docs/: Архитектура.txt  Описание архитектуры системы  Отчет о тестировании  Требования к использованию  Требования к разработке
Map/: map.cpp  map.h  mapBuilder.cpp  mapBuilder.h
Models/: constants.h  coord.cpp  coord.h  randomiser.cpp  randomiser.h  steps.cpp  steps.h
Pirates/: group.cpp  group.h  silver.cpp  silver.h
tests/: out01.txt  out02.txt  out03.txt  out04.txt  out05.txt  test01.txt  test01All.txt  test02.txt  test02Random.txt  test03.txt  test03Rectangle.txt  test04Circle.txt  test05Triangle.txt
